@@ -98,12 +98,14 @@ static void init_task()
 
 	printk("Loading init\n");
 	if (sys_execve("/bin/init", args, 18 )) {
-		if (sys_execve("/bin/sh", args, 0))
-			panic("No init or sh found");
+		if((num=sys_open("/dev/tty1",2))<0)
+			printk("Unable to open /dev/tty (error %d)\n",-num);
 		if (sys_dup(0)!=1)
 			printk("dup failed\n");
 		sys_dup(0);
 		printk("No init - running /bin/sh\n");
+		if (sys_execve("/bin/sh", args, 0))
+			panic("No init or sh found");
 	}
 	/* Brackets round the following code are required as a work around
 	 * for a bug in the compiler which causes it to jump past the asm
